# ethc

./: CMakeLists.txt  CMakePresets.json  main.c  todo.txt  vcpkg.json
.zed/: tasks.json
src/: signer.h  transaction.h
